# yogic

./: .gitignore  LICENSE  Pipfile  README.md  equate.py  example.py  extension.py  puzzle_stupid.py  pyproject.toml  setup.cfg  setup.py
.githooks/: post-commit  pre-commit
examples/: equate.py  example.py  puzzle_smart.py  puzzle_stupid.py
lib/: __init__.py  backtracking.py  monad.py  tailcalls.py  util.py  yogic.py
lib/monad/: continuation.py  generator.py  resolver.py
src/: __init__.py  _version.py  tmp.py  yogic.py
src/examples/: example.py  main.py  puzzle_smart.py  puzzle_stupid.py
src/yogic/: __init__.py  _version.py  backtracking.py  extension.py  functional.py  unification.py  utils.py  yogic.py
yogic.egg-info/: PKG-INFO  SOURCES.txt
