[builld-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "yogic"
license = { file = "LICENSE" }
authors = [
    { name = "Mick Krippendorf", email = "m.krippendorf@freenet.de" },
]

description = "Yet another Prolog-like thingy for Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pillmuncher/yogic"


[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/yogic/_version.py"
versionfile_build = "src/_version.py"
tag_prefix = ""
parentdir_prefix = "yogic-"
