[metadata]
name = yogic
version = 0.21a
author = 'Mick Krippendorf'
author_email = <m.krippendorf@freenet.de>
description = Yet another Prolog-like thingy for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pillmuncher/yogic
project_urls =
	Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.10

[options.packages.find]
where=src

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/yogic/_version.py
versionfile_build = yogic/_version.py
tag_prefix =
parentdir_prefix = yogic-

